# 20220928-berlindroid-rust

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app-android/: build.gradle.kts
app-android/src/main/: AndroidManifest.xml
app-js/: build.gradle.kts
app-js/src/main/resources/: index.html
bigint/: build.gradle.kts
bigint/karma.config.d/: wasm.js
bigint/rsrc/: Cargo.toml
bigint/rsrc/src/: BigUIntArithmetic.rs
bigint/rsrc/src/BigUIntArithmetic/: BigIntegerArithmeticSpec.rs  Java.rs  WASM.rs
bigint/src/androidMain/: AndroidManifest.xml
bigint/src/androidMain/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntArithmetic.kt  BigUIntegerFactory.kt
bigint/src/commonMain/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntegerContract.kt  BigUIntegerFactory.kt
bigint/src/commonTest/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntegerFactorySpec.kt  BigUIntegerSpec.kt
bigint/src/concurrentMain/kotlin/io/bitpogo/rustkmp/bignumber/: BigUInteger.kt
bigint/src/concurrentTest/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntegerFactorySpec.kt  BigUIntegerSpec.kt
bigint/src/jsMain/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntArithmetic.kt  BigUInteger.kt  BigUIntegerContract.kt  BigUIntegerFactory.kt
bigint/src/jsTest/kotlin/io/bitpogo/rustkmp/bignumber/: BigUIntArithmeticSpec.kt  BigUIntegerFactorySpec.kt  (+1 more)
bigint/wasm/: bigint_arithmetic.d.ts  bigint_arithmetic.js  bigint_arithmetic_bg.wasm  bigint_arithmetic_bg.wasm.d.ts
buildSrc/: build.gradle.kts
detekt/: baseline.xml
gradlePlugin/rust-kmp-dependency/: build.gradle.kts
(+27 files in other folders)
